# digit-classification

./: .flake8  .gitignore  README.md  pyproject.toml
src/digit_classification/: cli.py  data.py  evaluation.py  model.py
tests/: test_data.py  test_evaluation.py  test_model.py
